--- a/IDW/IDW.html
+++ b/IDW/IDW.html
@@ -125,8 +125,8 @@ In 2016, IDW launched the Hasbro Reconstruction initiative to present a shared u
 <li>Dungeons and Dragons: Evil at Baldur's Gate 		April 2018 - ongoing 
 <li>Easy Way 	#1–4 	April – July 2005 
 <li>Epilogue 	#1–4 	October 2008 – January 2009 
-<li>Eric Red's Containment[3] 	#1–5 	January – May 2005 
-<li>Everybody's Dead[4] 	#1–5 	March – July 2008 
+<li>Eric Red's Containment 	#1–5 	January – May 2005 
+<li>Everybody's Dead 	#1–5 	March – July 2008 
 <li>Fallen Angel 	#1–33 	December 2005 – December 2008 
 <li>First Strike 	#0–6 	August – October 2017 
 <li>FX 	#1–6 	March – August 2008 
@@ -154,14 +154,14 @@ In 2016, IDW launched the Hasbro Reconstruction initiative to present a shared u
 <li>Grand Fanta: The Best of Ashley Wood 		June 2004 
 <li>Grimjack: Killer Instinct 	#1–6 	January – June 2005 
 <li>Grimjack: The Manx Cat 	#1–6 	August 2009 – January 2010 
-<li>Groom Lake[5] 	#1–4 	March – July 2009 
+<li>Groom Lake	#1–4 	March – July 2009 
 <li>Grumpy Old Monsters 	#1–4 	November 2003 – March 2004 
 <li>Guns, Drugs, and Monsters: A Cal McDonald Mystery 		February 2005 
 <li>Gutter Magic 	#1-4 	January 2016 - April 2016 
 <li>Hairball: A Cal McDonald Mystery 	#1 	October 2002 
 <li>Haven: After the Storm 		September 3, 2013 
 <li>Haven: In the Beginning 		August 26, 2014 
-<li>Heartbreakers Meet Boilerplate[6][7] 		August 2005 
+<li>Heartbreakers Meet Boilerplate		August 2005 
 <li>Horrorcide 	#1 	September 2004 
 <li>HYDE 	#1 	October 2004 
 <li>IDW Poster Book 		
@@ -186,7 +186,7 @@ In 2016, IDW launched the Hasbro Reconstruction initiative to present a shared u
 <li>The Last Resort 		April 2010 
 <li>The Legend of GrimJack 		
 <li>Legion 		
-<li>Legion: Prophets[10] 		
+<li>Legion: Prophets	
 <li>The Life and Times of Savior 28 		
 <li>Little Apple Dolls: Welcome to the Inbetween 		
 <li>Little Book of Horror: Dracula 		
@@ -199,7 +199,7 @@ In 2016, IDW launched the Hasbro Reconstruction initiative to present a shared u
 <li>The Lurkers 		
 <li>Mage Knight: Stolen Destiny 		
 <li>Mage Knight: Rebellion 		
-<li>Magic the Gathering (Comic) 	#1- 	November 2011 – ongoing 
+<li>Magic the Gathering (Comic) 2011
 <li>Mars IDW 		
 <li>Masters of Horror 		
 <li>The Maze Agency 		
@@ -214,7 +214,7 @@ In 2016, IDW launched the Hasbro Reconstruction initiative to present a shared u
 <li>My Little Pony: Legends of Magic 	#1-12 	2017 –2018 
 <li>New Avengers/Transformers 	#1-4 	July 2007 - October 2007 
 <li>Night Mary 	#1–5 	July – November 2005 
-<li>Night Owl Society[14] 	#1–3 	April – June 2017 
+<li>Night Owl Society 	#1–3 	April – June 2017 
 <li>Olympus Heights 		
 <li>Orphan Black 	#1–5 	February 2015 – August 2015 
 <li>Orphan Black: HELSINKI 		November 2015– 
@@ -324,71 +324,7 @@ In 2016, IDW launched the Hasbro Reconstruction initiative to present a shared u
 <li>That Hell-Bound Train 		
 <li>Tilting at Windmills 		
 <li>Tommyrot: The Art of Ben Templesmith 		
-<li>The Transformers 	#1–31 	November 2009 – December 2011 
-<li>Transformers 		March 2019 
-<li>The Transformers: All Hail Megatron 	#1–16 	July 2008 – October 2009 
-<li>The Transformers: The Animated Movie 	#1–4 	October 2006 – January 2007 
-<li>The Transformers: The Ark – A CompleteCompendium of Transformers Animation Models 	#1 	May 2007 
-<li>The Transformers: Autocracy 	#1–12 	January 2012 – June 2012 
-<li>Transformers: Beast Wars – The Ascending 	#1–4 	October 2007 – January 2008 
-<li>Transformers: Beast Wars – The Gathering 	#1–4 	February 2006 – May 2006 
-<li>Transformers: Beast Wars – Sourcebook 	#1–4 	August 2007 – February 2008 
-<li>The Transformers: The Best of Don Figueroa 		
-<li>The Transformers: The Best of Simon Furman 		
-<li>The Transformers: Best of UK 		
-<li>The Transformers: Bumblebee 	#1–4 	December 2009 – March 2010 
-<li>The Transformers Continuum 		November 2009 
-<li>The Transformers: Combiner Hunters 		July 2015 
-<li>Transformers: Cybertron: Balancing Act 	#1–12 	
-<li>The Transformers: Dark Cybertron 		November 2013 &amp; March 2014 
-<li>Transformers: The Death of Optimus Prime 		December 2011 
-<li>The Transformers: Devastation 	#1–6 	October 2007 – February 2008 
-<li>The Transformers: Drift 	#1–4 	September 2010 – October 2010 
-<li>The Transformers: Drift - Empire of Stone 	#1–4 	November 2014 – February 2015 
-<li>The Transformers: Escalation 	#1–6 	November 2006 – April 2007 
-<li>The Transformers: Evolutions – Hearts of Steel 	#1–4 	June 2006 – September 2006 
-<li>Transformers: Generation 1, Volume One 		
-<li>Transformers: Generation 1, Volume Two 		
-<li>The Transformers: Generations 		
-<li>The Transformers: Greatest Battles of Optimus Prime and Megatron 		
-<li>The Transformers: Heart of Darkness 	#1–4 	March 2011 – June 2011 
-<li>The Transformers Holiday Special 		December 2015 
-<li>The Transformers: Infestation 	#1–2 	February 2011 
-<li>The Transformers: Infiltration 	#0–6 	October 2005 – July 2006 
-<li>The Transformers: Ironhide 	#1–4 	May 2010 – August 2010 
-<li>The Transformers: Last Stand of the Wreckers 	#1–5 	January 2010 – May 2010 
-<li>The Transformers: Lost Light 	#1–25 	December 2016 – November 2018 
-<li>The Transformers: Maximum Dinobots 	#1–5 	December 2008 – April 2009 
-<li>The Transformers: Megatron Origin 	#1–4 	June 2007 – October 2007 
-<li>The Transformers: Monstrosity 	#1–12 	March 2013 – July 2013 
-<li>The Transformers: More than Meets the Eye 	#1–57 	January 2012 – September 2016 
-<li>Transformers: Movie Adaptation 		
-<li>Transformers: Movie Prequel 		
-<li>Transformers: Movie Prequel - Saga of the Allspark 		
-<li>Transformers: Nefarious 		
-<li>The Transformers: Primacy 	#1–4 	August 2014 – November 2014 
-<li>The Transformers: Punishment 		June 2014 
-<li>The Transformers: Redemption 		October 2015 
-<li>Transformers: The Reign of Starscream 		
-<li>Transformers: Requiem of the Wreckers 		May 2018 
-<li>The Transformers: Revelation 		
-<li>Transformers: Revenge of the Fallen Movie Prequel - Alliance 		
-<li>Transformers: Revenge of the Fallen Movie Prequel - Defiance 		
-<li>The Transformers: Robots in Disguise 	#1–57 	January 2012 – September 2016 
-<li>The Transformers: Salvation 		June 2017 
-<li>The Transformers: Sins of the Wreckers 	#1–5 	November 2015 – June 2016 
-<li>The Transformers: Spotlight 		September 2006 – May 2013 
-<li>The Transformers: Stormbringer 	#1–4 	July 2006 – October 2006 
-<li>Transformers: Tales of the Fallen 		
-<li>The Transformers: Target 2006 		
-<li>The Transformers: Till All Are One 	#1–12 	June 2016 – December 2017 
-<li>The Transformers: Titans Return 		July 2016 
-<li>Transformers: Unicron 	#1–7 	May 2018 – November 2018 
-<li>Transformers vs. Visionaries 	#1–5 	January 2018 – May 2018 
-<li>Transformers: The War Within, Volume 1 		
-<li>Transformers: The War Within, Volume 2 – The Dark Ages 		
-<li>The Transformers: Windblade 	#1–4 	April 2014 – July 2014 
-<li>Transformers Animated: The Arrival 		
+<li><a href="../Transformers/Transformers.html">Transformers</a> 	#1–31 	November 2009 – December 2011 	
 <li>Tres Fanta: Even More Art of Ashley Wood 		
 <li>True Blood 	#1–6 	July – December 2010 
 <li>True Blood: Tainted Love 	#1–6 	February – July 2011 
@@ -397,7 +333,7 @@ In 2016, IDW launched the Hasbro Reconstruction initiative to present a shared u
 <li>Underworld 		
 <li>Underworld: Evolution 		
 <li>Underworld: Red in Tooth and Claw 		
-<li>Underworld: Rise of the Lycans[24] 		
+<li>Underworld: Rise of the Lycans		
 <li>Uno Fanta Art: The Art of Ashley Wood 		
 <li>Vampire Hunter D 		2006
 <li>The Vanishers 	#1 	May 2002 
@@ -407,7 +343,7 @@ In 2016, IDW launched the Hasbro Reconstruction initiative to present a shared u
 <li>We Will Bury You 		
 <li>Will Eisner's John Law 		
 <li>Will Eisner's John Law: Angels and Ashes, Devils and Dust 		
-<li>Wire Hangers[25] 		
+<li>Wire Hangers	
 <li>Witch and Wizard: Battle for Shadowland 		
 <li>World War Robot 		
 <li>Wormwood: Gentleman Corpse 		
