--- a/index.html
+++ b/index.html
@@ -13014,6 +13014,13 @@
 </tr>
 
 <tr>
+<td>Rip Off Press</td>
+<td>1969</td>
+<td>Publisher</td>
+<td><a href="RipOffPress/RipOffPress.html">Details</a>
+</tr>
+
+<tr>
 <td>Ripley's Believe It or Not!</td>
 <td>1918</td>
 <td>New York Globe</td>
