--- a/index.html
+++ b/index.html
@@ -7548,6 +7548,14 @@
 </tr>
 
 <tr>
+<td>Harvey Comics</td>
+<td>1941</td>
+<td>Publisher</td>
+<td><a href="HarveyComics/HarveyComics.html">Details</a></td>
+</tr>
+
+
+<tr>
 <td>Harvey Kurtzman</td>
 <td>1924</td>
 <td>Creator</td>
