--- a/Dynamite/Dynamite.html
+++ b/Dynamite/Dynamite.html
@@ -35,17 +35,17 @@ In July 2016, prior to Comic-Con International, The New York Times ran a story a
 <b>Titles</b>
 </p><p>
 
-<li>A Game of Thrones
+<li><a href="../GameOfThrones/GameOfThrones.html">Game of Thrones</a>
 <li>Grumpy Cat and Pokey
-<li>Army of Darkness
+<li><a href="../EvilDead3/EvilDead3.html">Army of Darkness</a>
 <li>Adolescent Radioactive Black Belt Hamsters
 <li>Athena
 <li>Bad Boy
 <li>Battlefields
-<li>Battlestar Galactica
-<li>Betty Boop
-<li>The Bionic Man
-<li>The Bionic Woman
+<li><a href="../BattlestarGalactica/BattlestarGalactica.html">Battlestar Galactica</a>
+<li><a href="../BettyBoop/BettyBoop.html">Betty Boop</a>
+<li><a href="../ABC/ABC.html">The Bionic Man</a>
+<li><a href="../ABC/ABC.html">The Bionic Woman</a>
 <li>Black Terror
 <li>Black Bat
 <li>Bob's Burgers
@@ -53,6 +53,7 @@ In July 2016, prior to Comic-Con International, The New York Times ran a story a
 <li>Brickleberry
 <li>Buck Rogers
 <li>Captain Victory
+<li><a href="../Centipede/Centipede.html">Centipede</a>
 <li>The Complete Alice in Wonderland
 <li>The Complete Dracula
 <li>Damsels
@@ -65,7 +66,6 @@ In July 2016, prior to Comic-Con International, The New York Times ran a story a
 <li>Expendables
 <li>Flash Gordon: Zeitgeist
 <li>Freddy vs. Jason vs. Ash
-<li>A Game of Thrones
 <li>The Green Hornet
 <li>Grimm
 <li>Highlander
