--- a/index.html
+++ b/index.html
@@ -3579,7 +3579,7 @@
 <tr>
 <td>Centipede</td>
 <td>2017</td>
-<td>Dynamite Entertainment</td>
+<td>Dynamite</td>
 <td><a href="Centipede/Centipede.html">Details</a></td>
 </tr>
 
