--- a/CBS/CBS.html
+++ b/CBS/CBS.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="../slideshow.css">
 <script src="../slideshow.js"></script>
-<title></title>
+<title>CBS</title>
 </head>
 
 <body>
@@ -31,6 +31,9 @@
 <div class="mySlides" style="text-align: center;"><img src="CBS10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CBS11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CBS12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CBS13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CBS14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CBS15.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -38,11 +41,28 @@
 </p><p>
 CBS (Columbia Broadcasting System) is an American English-language commercial broadcast television and radio network since 1927 that is the flagship property of the CBS Entertainment Group division of ViacomCBS. The company is headquartered at the CBS Building in New York City with major production facilities and operations in New York City (at the CBS Broadcast Center) and Los Angeles (at CBS Television City and the CBS Studio Center).
 </p><p>
-CBS is sometimes referred to as the Eye Network, in reference to the company's symbol, in use since 1951. It has also been called the "Tiffany Network", alluding to the perceived high quality of CBS programming during the tenure of William S. Paley. It can also refer to some of CBS's first demonstrations of color television, which were held in a former Tiffany & Co. building in New York City in 1950.
+CBS is sometimes referred to as the Eye Network, in reference to the company's symbol, in use since 1951. It has also been called the "Tiffany Network", alluding to the perceived high quality of CBS programming during the tenure of William S. Paley. It can also refer to some of CBS's first demonstrations of color television, which were held in a former Tiffany &amp; Co. building in New York City in 1950.
 </p><p>
 The network has its origins in United Independent Broadcasters Inc., a collection of 16 radio stations purchased by Paley in 1928 and renamed the Columbia Broadcasting System. Under Paley's guidance, CBS would first become one of the largest radio networks in the United States, and eventually one of the Big Three American broadcast television networks. In 1974 CBS dropped its former full name and became known simply as CBS, Inc. The Westinghouse Electric Corporation acquired the network in 1995, renamed its corporate entity to the current CBS Broadcasting, Inc. in 1997, and eventually adopted the name of the company it had acquired to become CBS Corporation. In 2000 CBS came under the control of the first Viacom, which was formed as a spin-off of CBS in 1971. In late 2005, Viacom split itself into two separate companies and re-established CBS Corporation through the spin-off of its broadcast television, radio, and select cable television and non-broadcasting assets, with the CBS television network at its core. CBS Corporation was controlled by Sumner Redstone through National Amusements, which also controlled the second Viacom until December 4, 2019, when the two separated companies agreed to re-merge to become the new single entity known as ViacomCBS.
 </p><p>
 CBS formerly operated the CBS Radio network until 2017, when it merged its radio division with Entercom. Prior to then, CBS Radio mainly provided news and features content for its portfolio owned-and-operated radio stations in large and mid-sized markets, and affiliated radio stations in various other markets. While CBS Corporation shareholders own a 72% stake in Entercom, CBS no longer owns or operates any radio stations directly, though CBS still provides radio news broadcasts to its radio affiliates and the new owners of its former radio stations and licenses the rights to use CBS trademarks under a long-term contract. The television network has more than 240 owned-and-operated, and affiliated television stations throughout the United States; some of them are also available in Canada via pay-television providers or in border areas over-the-air. The company ranked 197th on the 2018 Fortune 500 of the largest United States corporations by revenue.
+</p><p>
+<li><a href="CBS14.jpg">Ed Sullivan Show</a> (1948)
+<li><a href="CBS1.jpg">I Love Lucy</a> (1951)
+<li><a href="CBS5.jpg">Honeymooners</a>(1955)
+<li><a href="CBS4.jpg">Twilight Zone</a> (1959)
+<li><a href="CBS2.jpg">Dick Van Dyke Show</a> (1961)
+<li><a href="CBS3.jpg">Munsters</a> (1964)
+<li><a href="CBS9.jpg">Lost In Space</a> (1965)
+<li><a href="CBS12.jpg">Smothers Brothers</a> (1967)
+<li><a href="CBS7.jpg">Mary Tyler Moore</a> (1970)
+<li><a href="CBS10.jpg">All In The Family</a> (1971)
+<li><a href="CBS13.jpg">Mash</a> (1972)
+<li><a href="CBS6.jpg">Bob Newhart</a> (1972)
+<li><a href="CBS11.jpg">Jeffersons</a> (1975)
+<li><a href="CBS8.jpg">Incredible Hulk</a> (1978)
+<li><a href="CBS15.jpg">Criminal Minds</a> (2005)
 </p>
+
 </body>
 </html>
