--- a/NBC/NBC.html
+++ b/NBC/NBC.html
@@ -36,7 +36,31 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-
+The National Broadcasting Company (NBC) is an American English-language commercial terrestrial radio and television network that is a flagship property of NBCUniversal, a subsidiary of Comcast. The network is headquartered at 30 Rockefeller Plaza in New York City, with additional major offices near Los Angeles (at 10 Universal City Plaza), Chicago (at the NBC Tower) and Philadelphia (at the Comcast Technology Center). The network is one of the Big Three television networks. NBC is sometimes referred to as the "Peacock Network", in reference to its stylized peacock logo, introduced in 1956 to promote the company's innovations in early color broadcasting. It became the network's official emblem in 1979.
+</p><p>
+Founded in 1926 by the Radio Corporation of America (RCA), NBC is the oldest major broadcast network in the United States. At that time the parent company of RCA was General Electric (GE). In 1932, GE was forced to sell RCA and NBC as a result of antitrust charges.
+</p><p>
+In 1986, control of NBC passed back to General Electric (GE) through its $6.4 billion purchase of RCA. GE immediately began to liquidate RCA's various divisions, but retained NBC. Following the acquisition by GE, Bob Wright served as chief executive officer of NBC, remaining in that position until his retirement in 2007, when he was succeeded by Jeff Zucker.
+</p><p>
+In 2003, French media company Vivendi merged its entertainment assets with GE, forming NBC Universal. Comcast purchased a controlling interest in the company in 2011, and acquired General Electric's remaining stake in 2013. Following the Comcast merger, Zucker left NBCUniversal and was replaced as CEO by Comcast executive Steve Burke.
+</p><p>
+NBC has thirteen owned-and-operated stations and nearly 200 affiliates throughout the United States and its territories, some of which are also available in Canada and/or Mexico via pay-television providers or in border areas over-the-air; NBC also maintains brand licensing agreements for international channels in South Korea and Germany.
 </p>
+
+<p>
+<li><a href="NBC1.jpg">Tonight Show</a> (1954)
+<li><a href="NBC5.jpg">I Dream of Jeanie</a> (1965)
+<li><a href="NBC6.jpg">Get Smart</a> (1965)
+<li><a href="NBC2.jpg">Star Trek</a> (1966)
+<li><a href="NBC12.jpg">Laugh In</a> (1968)
+<li><a href="NBC11.jpg">Night Gallery</a> (1969)
+<li><a href="NBC3.jpg">Saturday Night Live</a> (1975)
+<li><a href="NBC7.jpg">Late Night</a> (1982)
+<li><a href="NBC8.jpg">Cheers</a> (1982)
+<li><a href="NBC4.jpg">Seinfield</a> (1989)
+<li><a href="NBC9.jpg">the Office</a> (2005)
+<li><a href="NBC10.jpg">30 Rock</a> (2006)
+</p>
+
 </body>
 </html>
