--- a/index.html
+++ b/index.html
@@ -6218,6 +6218,13 @@
 </tr>
 
 <tr>
+<td>Farrell Publications</td>
+<td>1940</td>
+<td>Publisher</td>
+<td><a href="Farrell/Farrell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fat and Slat</td>
 <td>1947</td>
 <td>EC</td>
@@ -6237,6 +6244,14 @@
 <td>Image</td>
 <td><a href="Fatale/Fatale.html">Details</a></td>
 </tr>
+
+<tr>
+<td>Fawcett Comics</td>
+<td>2012</td>
+<td>Publisher</td>
+<td><a href="Fawcett/Fawcett.html">Details</a></td>
+</tr>
+
 
 <tr>
 <td>FBP: Federal Bureau of Physics</td>
