--- a/DisneyAfternoon/DisneyAfternoon.html
+++ b/DisneyAfternoon/DisneyAfternoon.html
@@ -7,10 +7,14 @@
 </head>
 
 <body>
-<img src="DisneyAfternoon.jpg"> <br>
-10 issues in 1994 by Marvel
+<img src="DisneyAfternoon1.jpg"><img src="DisneyAfternoon2.jpg"> <br>
+TV series from 1990-1999 by Disney, 10 issues in 1994 by Marvel
 <p>
-It's Darkwing Duck to the rescue as he takes on the Fearsome Five in an action-packed adventure! Disney Afternoon presents fresh, new characters in brand new, exciting escapades. Join TaleSpin, Goof Troop, Bonkers and more for hilarious fun! Written by John Blair Moore, Roger Brown and Janet Gilbert. Pencils by John Blair Moore, Cosme Quartieri, Andres Klacik and Rick Stasi. Cover by John Blair Moore and Andres Klacik.
+The Disney Afternoon was a created-for-syndication two-hour animated television programming block produced by Walt Disney Television Animation which originally ran from September 10, 1990 to August 29, 1997. DuckTales premiered in 1987 as Disney was focused on incorporating animated series into its portfolio in the era of cartoons; it was Disney's only syndicated cartoon series until accompanied in 1989 by Chip 'n Dale: Rescue Rangers. These two shows had been packaged together as an hour-long cartoon block from 1989 to 1990, until both shows were incorporated into The Disney Afternoon in September 1990.
+</p><p>
+Beginning with the 1994 season, Marvel Comics (which would eventually be acquired by Disney) began publishing a comic book series based on the programs featured on the block, as part of their line of comics based on modern Disney properties. The series mainly consisted of stories based on Darkwing Duck, with occasional stories featuring Chip 'n Dale: Rescue Rangers and TaleSpin. It ended at 10 issues, but stories based on the block's shows continued in Marvel's Disney Comic Hits! and in the children's magazine Disney Adventures.
+</p><p>
+The shows that aired from 1997 to 1998 were DuckTales, Quack Pack, Mighty Ducks and 101 Dalmatians: The Series, and from 1998 to 1999, it was formed by DuckTales, Disney's Doug and Hercules.
 </p>
 
 </body>
