--- a/index.html
+++ b/index.html
@@ -5194,8 +5194,15 @@
 </tr>
 
 <tr>
+<td>Disney</td>
+<td>1923</td>
+<td>Publisher</td>
+<td><a href="Disney/Disney.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Disney Afternoon</td>
-<td>1994</td>
+<td>1990</td>
 <td>Disney</td>
 <td><a href="DisneyAfternoon/DisneyAfternoon.html">Details</a></td>
 </tr>
