--- a/Disney/Disney.html
+++ b/Disney/Disney.html
@@ -234,7 +234,8 @@ Disney Movies
 <li><a href="Disney37.jpg">The Jungle Book</a> (1967)    
 <li><a href="Disney38.jpg">The Aristocats</a>  (1970)   
 <li><a href="Disney39.jpg">Robin Hood</a>  (1973)    
-<li><a href="Disney40.jpg">Herbie Rides Again</a>  (1974)    
+<li><a href="Disney40.jpg">Herbie Rides Again</a>  (1974)  
+<li><a href="">Escape to Witch Mountain </a> (1975)
 <li><a href="Disney41.jpg">The Shaggy D.A.</a> (1976)   
 <li><a href="Disney42.jpg">The Many Adventures of Winnie the Pooh</a> (1977)
 <li><a href="Disney43.jpg">The Rescuers</a>  (1977)   
@@ -361,8 +362,8 @@ Disney Movies
 
 Disney Television
 </p><p>
-<li>Walt Disney Show (1954)
-<li>The Mickey Mouse Club (1955)
+<li><a href="Disney156.jpg">Wonderful World of Disney</a> (1954) 1224 episodes!
+<li><a href="Disney157.jpg">The Mickey Mouse Club</a> (1955)
 <li>The Mouse Factory (1971)
 <li>Herbie, the Love Bug (1982)
 <li>Small &amp; Frye (1983)
