--- a/Disney/Disney.html
+++ b/Disney/Disney.html
@@ -58,6 +58,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Disney38.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Disney39.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Disney40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Disney158.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Disney41.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Disney42.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Disney43.jpg"></div>
@@ -173,6 +174,16 @@
 <div class="mySlides" style="text-align: center;"><img src="Disney153.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Disney154.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Disney155.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Disney156.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Disney157.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Disney159.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Disney160.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Disney161.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Disney162.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Disney163.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Disney164.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Disney165.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Disney166.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -231,17 +242,23 @@ Disney Movies
 <li><a href="Disney34.jpg">One Hundred and One Dalmatians</a>  (1961)
 <li><a href="Disney35.jpg">The Sword in the Stone</a>   (1963)   
 <li><a href="Disney36.jpg">Mary Poppins</a> (1964) 
-<li><a href="Disney37.jpg">The Jungle Book</a> (1967)    
-<li><a href="Disney38.jpg">The Aristocats</a>  (1970)   
+<li><a href="Disney37.jpg">The Jungle Book</a> (1967)
+<li><a href="Disney161.jpg">The Love Bug</a> (1968)    
+<li><a href="Disney38.jpg">The Aristocats</a>  (1970) 
+<li><a href="Disney163.jpg">Bedknobs and Broomsticks</a> (1971)  
 <li><a href="Disney39.jpg">Robin Hood</a>  (1973)    
 <li><a href="Disney40.jpg">Herbie Rides Again</a>  (1974)  
-<li><a href="">Escape to Witch Mountain </a> (1975)
+<li><a href="Disney158.jpg">Escape to Witch Mountain </a> (1975)
+<li><a href="Disney164.jpg">The Apple Dumpling Gang</a> (1975)
+<li><a href="Disney165.jpg">The Strongest Man in the World</a> (1975)
+<li><a href="Disney166.jpg">Gus</a> (1976)
 <li><a href="Disney41.jpg">The Shaggy D.A.</a> (1976)   
 <li><a href="Disney42.jpg">The Many Adventures of Winnie the Pooh</a> (1977)
 <li><a href="Disney43.jpg">The Rescuers</a>  (1977)   
 <li><a href="Disney44.jpg">Herbie Goes to Monte Carlo</a>  (1977)   
 <li><a href="Disney45.jpg">Pete's Dragon</a>  (1977)    
 <li><a href="Disney46.jpg">The Cat from Outer Space</a>  (1978)
+<li><a href="Disney162.jpg">Return From Witch Mountain</a>  (1978)
 <li><a href="Disney47.jpg">The Black Hole</a>  (1979)
 <li><a href="Disney48.jpg">Herbie Goes Bananas</a> (1980)   
 <li><a href="Disney49.jpg">Popeye</a> (1980)
@@ -258,7 +275,7 @@ Disney Movies
 <li><a href="Disney60.jpg">DuckTales the Movie: Treasure of the Lost Lamp</a> (1990)  
 <li><a href="Disney61.jpg">The Rescuers Down Under</a> (1990)   
 <li><a href="Disney62.jpg">The Rocketeer </a> (1991)
-<li><a href="Disney63.jpg">Beauty and the Beast (1991)
+<li><a href="Disney63.jpg">Beauty and the Beast</a> (1991)
 <li><a href="Disney64.jpg">Aladdin</a> (1992)
 <li><a href="Disney65.jpg">Hocus Pocus</a> (1993)
 <li><a href="../LionKing/LionKing.html">The Lion King</a> (1994)
@@ -364,8 +381,8 @@ Disney Television
 </p><p>
 <li><a href="Disney156.jpg">Wonderful World of Disney</a> (1954) 1224 episodes!
 <li><a href="Disney157.jpg">The Mickey Mouse Club</a> (1955)
-<li>The Mouse Factory (1971)
-<li>Herbie, the Love Bug (1982)
+<li><a href="Disney159.jpg">The Mouse Factory</a> (1971)
+<li><a href="Disney160.jpg">Herbie, the Love Bug</a> (1982)
 <li>Small &amp; Frye (1983)
 <li>Gun Shy (1983)
 <li>Benji, Zax and the Alien Prince (1983)
