--- a/Marvel/Marvel.html
+++ b/Marvel/Marvel.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="Marvel1.jpg"> <br>
+<img src="Marvel.jpg"> <br>
 
 <p>
 <div class="row"><div class="column">
@@ -19,11 +19,41 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
+<div class="mySlides" style="text-align: center;"><img src="Marvel.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Marvel2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Marvel3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Marvel4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Marvel5.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Marvel6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel34.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -71,74 +101,44 @@ Marvel Imprints:
 <li>Tsunami
 <li>Ultimate Comics
 </p><p>
-Titles:
+
+
+Current Titles:
 </p><p>
-<li>Aero 
-<li>Amazing Spider-Man: Daily Bugle 
-<li>Ant-Man 
-<li>Atlantis Attacks 
-<li>Avengers 
-<li>Avengers of the Wastelands 
-<li>Black Cat 
-<li>Black Panther 
-<li>Black Panther and the Agents of Wakanda 
-<li>Cable 
-<li>Captain America 
-<li>Captain Marvel 
-<li>Conan the Barbarian 
-<li>Daredevil 
-<li>Deadpool 
-<li>Doctor Doom 
-<li>Excalibur 
-<li>Falcon &amp; Winter Soldier 
-<li>Fallen Angels 
-<li>Fantastic Four 
-<li>Force Works 2020 
-<li>Ghost Rider 
-<li>Ghost-Spider 
-<li>Guardians of the Galaxy 
-<li>Gwen Stacy 
-<li>Hawkeye: Freefall 
-<li>Hellions 
-<li>Immortal Hulk 
-<li>Iron Man 2020 
-<li>Machine Man 2020 
-<li>Magnificent Ms. Marvel 
-<li>Marauders 
-<li>Marvel's Spider-Man: The Black Cat Strikes 
-<li>Marvels X 
-<li>Miles Morales: Spider-Man 
-<li>Morbius 
-<li>Nebula 
-<li>New Mutants 
-<li>Punisher Soviet 
-<li>Ravencroft 
-<li>Rescue 2020
-<li>Runaways 
-<li>Savage Avengers 
-<li>Savage Sword of Conan 
-<li>Scream: Curse of Carnage 
-<li>Spider-Man 
-<li>Spider-Man/Venom: Double Trouble 
-<li>Spider-Verse 
-<li>Spider-Woman 
-<li>Star 
-<li>Star Wars 
-<li>Star Wars: Bounty Hunters 
-<li>Strikeforce 
-<li>Sword Master 
-<li>Tarot 
-<li>The Amazing Mary Jane 
-<li>The Amazing Spider-Man 
-<li>The Web of Black Widow 
-<li>Thor 
-<li>Valkyrie: Jane Foster 
-<li>Venom 
-<li>Wolverine
-<li>X-Force 
-<li>X-Men 
-<li>X-Men/Fantastic Four 
-<li>Yondu 
+<li><a href="Marvel1.jpg">Aero</a> (2019)
+<li><a href="Marvel2.jpg">Amazing Spider-Man</a> (2018) 
+<li><a href="Marvel3.jpg">Black Cat</a> (2019) 
+<li><a href="Marvel4.jpg">Black Panther</a> (2018) 
+<li><a href="Marvel5.jpg">Black Panther and the Agents of Wakanda</a> (2019) 
+<li><a href="Marvel6.jpg">Captain America</a> (2018)
+<li><a href="Marvel7.jpg">Captain Marvel</a> (2019)
+<li><a href="Marvel8.jpg">Conan the Barbarian</a> (2019)
+<li><a href="Marvel9.jpg">Daredevil</a> (2019)
+<li><a href="Marvel10.jpg">Deadpool</a> (2019)
+<li><a href="Marvel11.jpg">Doctor Doom</a> (2019)
+<li><a href="Marvel12.jpg">Excalibur</a> (2019)
+<li><a href="Marvel13.jpg">Fallen Angels</a> (2019) 
+<li><a href="Marvel14.jpg">Fantastic Four</a> (2018)
+<li><a href="Marvel15.jpg">Ghost-Spider</a> (2019)
+<li><a href="Marvel16.jpg">Ghost Rider</a> (2019)
+<li><a href="Marvel17.jpg">Immortal Hulk</a> (2018)
+<li><a href="Marvel18.jpg">Marauders</a> (2019) 
+<li><a href="Marvel19.jpg">Magnificent Ms. Marvel</a> (2019) 
+<li><a href="Marvel20.jpg">Miles Morales: Spider-Man</a> (2018)
+<li><a href="Marvel21.jpg">Morbius</a> (2019)
+<li><a href="Marvel22.jpg">New Mutants</a> (2019)
+<li><a href="Marvel23.jpg">Runaways</a> (2017) 
+<li><a href="Marvel24.jpg">Savage Avengers</a> (2019) 
+<li><a href="Marvel25.jpg">Savage Sword of Conan</a> (2019)
+<li><a href="Marvel26.jpg">Scream: Curse of Carnage</a> (2019)
+<li><a href="Marvel27.jpg">Star Wars</a> (2020) 
+<li><a href="Marvel28.jpg">Strikeforce</a> (2019)
+<li><a href="Marvel29.jpg">Sword Master</a> (2019)
+<li><a href="Marvel30.jpg">Thor</a> (2020) 
+<li><a href="Marvel31.jpg">Valkyrie: Jane Foster</a> (2019) 
+<li><a href="Marvel32.jpg">Venom</a>  (2018)
+<li><a href="Marvel33.jpg">X-Force</a> (2019) 
+<li><a href="Marvel34.jpg">X-Men</a> (2019)
 
 </p>
 </body>
