--- a/DCComics/DCComics.html
+++ b/DCComics/DCComics.html
@@ -7,9 +7,56 @@
 <title>DC Comics</title>
 </head>
 <body>
-<img src="DC_Comics_logo.jpg"> <img src="vertigo_logo.jpg"> <img src="Piranha_Press_logo.jpg"> <img src="Helix_logo.jpg"> <img src="All-AmericanComics_logo.jpg">
+
+<img src="DC_Comics_logo.jpg"> <img src="vertigo_logo.jpg"> <img src="Piranha_press_logo.jpg"> <img src="Helix_logo.jpg"> <img src="All-AmericanComics_logo.jpg">
 <p>
-DC Comics
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="DC1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC35.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
 </p><p>
 DC Comics, Inc. is an American comic book publisher. It is the publishing unit of DC Entertainment, a subsidiary of Warner Bros. since 1967. DC Comics is one of the largest and oldest American comic book companies, and produces material featuring numerous culturally iconic heroic characters including: Superman, Batman, Wonder Woman, The Flash, Green Lantern, Martian Manhunter, Nightwing, Green Arrow, Aquaman, Hawkman, Cyborg and Supergirl.
 </p><p>
@@ -27,41 +74,47 @@ That title evolved into Adventure Comics, which continued through issue #503 in 
 </p><p>
 All-American Publications is one of three American comic book companies that combined to form the modern-day DC Comics, one of the world's two largest comics publishers. Superheroes created for All-American include the original Atom, Flash, Green Lantern, Hawkman, and Wonder Woman, all in the 1940s' Golden Age of comic books.
 </p><p>
-<li>Action Comics 
-<li>Aquaman 
-<li>Batgirl 
-<li>Batman 
-<li>Batman/Superman 
-<li>Batman and the Outsiders 
-<li>Batman Beyond 
-<li>Books of Magic 
-<li>Catwoman 
-<li>Deathstroke 
-<li>Detective Comics 
-<li>Doom Patrol: Weight of the Worlds 
-<li>The Dreaming 
-<li>The Flash 
-<li>The Green Lantern 
-<li>Harley Quinn 
-<li>Hawkman 
-<li>House of Whispers 
-<li>Justice League 
-<li>Justice League Dark 
-<li>Justice League Odyssey 
-<li>Looney Tunes 
-<li>Lucifer 
-<li>Mad Magazine 
-<li>Nightwing 
-<li>Red Hood and the Outlaws 
-<li>Scooby-Doo, Where Are You? 
-<li>Shazam! 
-<li>Supergirl 
-<li>Superman 
-<li>Teen Titans 
-<li>The Terrifics 
-<li>WildC.A.T.s 
-<li>Wonder Woman 
-<li>Young Justice 
+Current Titles
+</p><p>
+<li><a href="DC1.jpg">Action Comics</a> (2016)
+<li><a href="DC2.jpg">Aquaman</a>  (2016)
+<li><a href="DC3.jpg">Batgirl</a> (2016)
+<li><a href="DC4.jpg">Batman</a> (2016)
+<li><a href="DC5.jpg">Batman/Superman</a> (2019) 
+<li><a href="DC6.jpg">Batman and the Outsiders</a> (2019) 
+<li><a href="DC7.jpg">Batman Beyond</a> (2019)
+<li><a href="DC8.jpg">Books of Magic</a> (2018)
+<li><a href="DC9.jpg">Catwoman</a> (2018)
+<li><a href="DC10.jpg">Deathstroke</a> (2016)
+<li><a href="DC11.jpg">Detective Comics</a> (2016)
+<li><a href="DC12.jpg">Doom Patrol: Weight of the Worlds</a> (2019) 
+<li><a href="DC13.jpg">The Dreaming</a> (2018)
+<li><a href="DC14.jpg">The Flash</a> (2016)
+<li><a href="DC15.jpg">The Green Lantern</a> (2018) 
+<li><a href="DC16.jpg">Harley Quinn</a> (2016)
+<li><a href="DC17.jpg">Hawkman</a> (2018)
+<li><a href="DC18.jpg">House of Whispers</a> (2018) 
+<li><a href="DC19.jpg">Justice League</a> (2018)
+<li><a href="DC20.jpg">Justice League Dark</a> (2018)
+<li><a href="DC21.jpg">Justice League Odyssey</a> (2018)
+<li><a href="DC22.jpg">Looney Tunes</a> (1994)
+<li><a href="DC23.jpg">Lucifer</a> (2018)
+<li><a href="DC24.jpg">Mad Magazine</a> (2018)
+<li><a href="DC25.jpg">Nightwing</a> (2016)
+<li><a href="DC26.jpg">Red Hood and the Outlaws</a> (2016) 
+<li><a href="DC27.jpg">Scooby-Doo, Where Are You?</a> (2010)
+<li><a href="DC28.jpg">Shazam!</a> (2018)
+<li><a href="DC29.jpg">Supergirl</a> (2016)
+<li><a href="DC30.jpg">Superman</a> (2018)
+<li><a href="DC31.jpg">Teen Titans</a> (2016)
+<li><a href="DC32.jpg">The Terrifics</a> (2018)
+<li><a href="DC33.jpg">WildC.A.T.s</a> (2019)
+<li><a href="DC34.jpg">Wonder Woman</a> (2016)
+<li><a href="DC35.jpg">Young Justice</a> (2019)
+
+</p><p>
+Current Limited Series
+</p><p>
 <li>Basketful of Heads 
 <li>Birds of Prey 
 <li>Batman: Creature of the Night 
