--- a/ACG/ACG.html
+++ b/ACG/ACG.html
@@ -19,6 +19,37 @@
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="ACG1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACG32.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -28,43 +59,42 @@ American Comics Group (ACG) was an American comic book publisher started in 1939
 </p><p>
 Founded by Benjamin W. Sangor, ACG was co-owned by Fred Iger from 1948 to 1967. Iger's father-in-law, Harry Donenfeld, head of National Periodical Publications (later known as DC Comics), was also a co-owner in the early 1960s (though Donenfeld was severely incapacitated and out of the business after an accident in 1962). ACG was distributed by Independent News Company, which also distributed by (and was part of the same company as) DC. 
 </p><p>
-<li><a href="../AdventuresIntoTheUnknown/AdventuresIntoTheUnknown.html">Adventures into the Unknown</a> (174 issues, Fall 1948 – Aug. 1967)
-<li>Blazing West (20 issues, 1948 – Nov 1951)
-<li>Commander Battle and the Atomic Sub" (7 issues, July 1954 – Aug. 1955)
-<li>Cookie (55 issues, Apr. 1946 – Sept. 1955)
-<li>Dizzy Dames' (6 issues, Sep 1952 – Jul 1953)
-<li><a href="../ForbiddenWorlds/ForbiddenWorlds.html">Forbidden Worlds</a> (145 issues, July/Aug. 1951 – Aug. 1967)
-<li>Funny Films (14 issues, Sep 1949 – May 1954)
-<li>“Gasp!’’ (4 issues, Mar. 1967 – Aug. 1967)
-<li>Giggle Comics (99 issues, Oct. 1943 – Jan. 1955)
-<li>Ha Ha Comics (99 issues, Oct. 1943 – Dec. 1954/Jan. 1955)
-<li>Hi Jinks (7 issues, Jul 1947 – Jul 1948)
-<li>Herbie (23 issues, Apr./May 1964 – Feb. 1967)
-<li>Hooded Horseman (7 issues, Jan 1952 – Jan 1953)
-<li>The Kilroys (54 issues, June/July 1947 – June/July 1955)
-<li>Lovelorn (114 issues, Aug./Sept. 1949 – June/July 1960)
-<li>Magic Agent (3 issues Jan 1962 – May 1962)
-<li>Midnight Mystery (7 issues, Jan 1961 – Oct 1961)
-<li>Milton Gross Funnies (2 issues, Aug. 1947-Sept. 1947)
-<li>Moon Mullins (4 issues, Dec. 1947-Oct. 1948)
-<li>Operation Peril (17 issues, Oct. 1950-Apr. 1953)
-<li><a href="../OutOfTheNight/OutOfTheNight.html">Out of the Night</a> (17 issues, Feb. 1952-Nov. 1954)
-<li>Romantic Adventures (138 issues, Mar./Apr. 1949 – Mar. 1964)
-<li>Search For Love" (2 issues, Feb.-Apr. 1950)
-<li><a href="../SkeletonHand/SkeletonHand.html">Skeleton Hand</a> (6 Issues, Sept.-Oct. 1952-Jul.-Aug. 1953)
-<li>Spencer Spook (2 issues, Mar.-May 1955)
-<li>Soldiers of Fortune (12 issues, Mar./Apr. 1951 – Jan./Feb. 1953)
-<li>Spy and Counterspy (2 issues, Aug.-Oct. 1949
-<li>Spy Hunters (22 issues, Dec. 1949-June 1953)
-<li>Teepee Tim(3 issues, Feb.-June 1955)
-<li>Unknown Worlds (57 issues, Aug. 1960 – Aug. 1967)
-<li>Wrangler Great Moments in Rodeo (50 issues, 1955 – 1966)
-<li>Young Heroes (3 issues, Feb–Jun. 1955)
-<li>Chuckle
-<li>Hi-Jinx
-<li>Merry-Go-Round
-<li>Sheriff of Coshise
-<li>The Clutching Hand
+<li><a href="../AdventuresIntoTheUnknown/AdventuresIntoTheUnknown.html">Adventures into the Unknown</a> (1948)
+<li><a href="ACG1.jpg">Blazing West</a> (1948)
+<li><a href="ACG2.jpg">Commander Battle and the Atomic Sub (1954)
+<li><a href="ACG3.jpg">Cookie</a> (1946)
+<li><a href="ACG4.jpg">Dizzy Dames</a> (1952)
+<li><a href="../ForbiddenWorlds/ForbiddenWorlds.html">Forbidden Worlds</a> (1951)
+<li><a href="ACG5.jpg">Funny Films</a> (1949)
+<li><a href="ACG6.jpg">Gasp!</a> (1967)
+<li><a href="ACG7.jpg">Giggle Comics</a> (1943)
+<li><a href="ACG8.jpg">Ha Ha Comics</a> (1943)
+<li><a href="ACG9.jpg">Hi Jinks</a> (1947)
+<li><a href="ACG10.jpg">Herbie</a> (1964)
+<li><a href="ACG11.jpg">Hooded Horseman</a> (1952)
+<li><a href="ACG12.jpg">The Kilroys</a> (1947)
+<li><a href="ACG13.jpg">Lovelorn</a> (1949)
+<li><a href="ACG14.jpg">Magic Agent</a> (1962)
+<li><a href="ACG15.jpg">Midnight Mystery</a> (1961)
+<li><a href="ACG16.jpg">Milton Gross Funnies</a> (1947)
+<li><a href="ACG17.jpg">Moon Mullins</a> (1947)
+<li><a href="ACG18.jpg">Operation Peril</a> (1950)
+<li><a href="../OutOfTheNight/OutOfTheNight.html">Out of the Night</a> (1952)
+<li><a href="ACG19.jpg">Romantic Adventures</a> (1949)
+<li><a href="ACG20.jpg">Search For Love</a> (1950)
+<li><a href="../SkeletonHand/SkeletonHand.html">Skeleton Hand</a> (1952)
+<li><a href="ACG21.jpg">Spencer Spook</a> (1955)
+<li><a href="ACG22.jpg">Soldiers of Fortune</a> (1951)
+<li><a href="ACG23.jpg">Spy and Counterspy</a> (1949)
+<li><a href="ACG24.jpg">Spy Hunters</a> (1949)
+<li><a href="ACG25.jpg">Teepee Tim</a> (1955)
+<li><a href="ACG26.jpg">Unknown Worlds</a> (1960)
+<li><a href="ACG27.jpg">Wrangler Great Moments in Rodeo</a> (1955)
+<li><a href="ACG28.jpg">Young Heroes</a> (1955)
+<li><a href="ACG29.jpg">Chuckle</a> (1945)
+<li><a href="ACG30.jpg">Merry-Go-Round</a> (1945)
+<li><a href="ACG31.jpg">Sheriff of Coshise</a> (1957)
+<li><a href="ACG32.jpg">The Clutching Hand</a> (1954)
 </p>
 
 </body>
