Love Death Robots

--- a/index.html
+++ b/index.html
@@ -9792,6 +9792,13 @@
 </tr>
 
 <tr>
+<td>Love Death &amp; Robots</td>
+<td>2019</td>
+<td>Netflix</td>
+<td><a href="LoveDeathRobots/LoveDeathRobots.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Love Dramas</td>
 <td>1949</td>
 <td>Marvel</td>
