--- a/index.html
+++ b/index.html
@@ -11549,6 +11549,13 @@
 </tr>
 
 <tr>
+<td>Netflix</td>
+<td>1997</td>
+<td>Publisher</td>
+<td><a href="Netflix/Netflix.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Nevermen</td>
 <td>2000</td>
 <td>Dark Horse</td>
